@@ -33,6 +33,7 @@ Features:
   pt::conll pt::cintil
   ro::rdt
   sl::conll
+  sv::mamba sv::parole sv::suc
 * Feature 'negativeness' renamed to 'polarity'. Affected drivers:
   xx::multext
   ar::padt ar::conll ar::conll2007
